syntax = "proto3";

option go_package = "epistemic-me-core/pb/models";

message User {
    string id = 1;
    string developer_id = 2;
    string name = 3;
    string email = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}
